feat: create dynamic query conditions
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>